tests/snapshots/regression/collections__empty_and_singleton.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/collections/empty_and_singleton.flx
exit_code: 1

• 2 errors • tests/fixtures/collections/empty_and_singleton.flx
error[E004]: Undefined Variable

I can't find a value named `f`.

  tests/fixtures/collections/empty_and_singleton.flx:3:1
  |
3 | f();
  | ^

Hint:
  Define it first: let f = ...;

Help:
  Did you mean one of: `Flow.List.abs`, `Flow.List.all`, `Flow.List.any`?


error[E004]: Undefined Variable

I can't find a value named `f`.

  tests/fixtures/collections/empty_and_singleton.flx:4:1
  |
4 | f(1);
  | ^

Hint:
  Define it first: let f = ...;

Help:
  Did you mean one of: `Flow.List.abs`, `Flow.List.all`, `Flow.List.any`?

Found 2 errors.
